@@ -124,6 +124,9 @@ C-API
 Library
 -------
 
+- Issue #8980: Fixed a failure in distutils.command check that was shadowed
+  by an environment that does not have docutils. Patch by Arferver.
+
 - Issue #1050268: parseaddr now correctly quotes double quote and backslash
   characters that appear inside quoted strings in email addresses.
 
